--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
       <div>
           <h1>
-            Hi, I'm Prasad! <img src="https://media.tenor.com/A7eequnhcGwAAAAM/hand.gif" width="60px"/>
+            Hi there! <img src="https://media.tenor.com/A7eequnhcGwAAAAM/hand.gif" width="60px"/>
           </h1>
           <p>
 &emsp; Skilled Computer Science graduate with expertise in Python and Java programming. IBM Certified in Web Development (HTML, CSS, JavaScript) and proficient in version control using Git and GitHub. Experienced in Linux Commands and Shell Scripting. Adept at problem-solving, with excellent communication and leadership skills. Demonstrated dedication to personal growth, evidenced by a substantial YouTube following of 37k+ subscribers. Successfully qualified GATE exam in 2023 with a commendable score. Eager to leverage my skills and knowledge in a dynamic software development role, focusing on impactful applications. Passionate about driving innovation and contributing to collaborative, high-performing teams.
